openshift/infrastructure/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: guestbook
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
        tier: database
    spec:
      containers:
        - name: postgresql
          image: quay.io/fedora/postgresql-16:latest
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/pgsql/data
          resources:
            limits:
              memory: 512Mi
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-pvc
