openshift/infrastructure/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: guestbook
    tier: cache
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
