openshift/infrastructure/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook-frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
